fix in Line class